# xdg-applications

./: Cargo.toml  README.md  flake.nix
.github/workflows/: build.yml
src/: main.rs
