[package]
name = "xdg-applications"
version = "0.1.0"
edition = "2021"

[features]
default = ["search"]
search = ["dep:fuzzy-matcher"]

[profile.release]
opt-level = 'z'   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary*

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
freedesktop_entry_parser = "1.3.0"
fuzzy-matcher = { version = "0.3.7", optional = true }
libc = "0.2.155"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
